2014-06-07 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Fix handling of complex fied in non-aggregate queries.

2014-06-07 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (queryIdentify)
	Support also GROUP BY in options in queryIdentify.

2014-06-06 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Rewrote query parser to match generic aggregate functions, not just count.

2014-06-05 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	Primitive NSCalendarDate object handling (only description for now)

2014-06-03 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
        Try to parse count() and count(id)

2014-05-19 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Parse alias fields in query.

2014-05-16 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	Fix writing of ordered header, in case of sub-objects.

2014-05-13 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBSoapCSV.m
	add writeOrdered accessor and use it.

2014-05-13 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	* DBCSVWriter.h
	* DBCSVWriter.m
	New core that analyzes fieldnames and is capable of extracting them in given order.

2014-05-12 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
        Fix warning and perhaps wrong +bomLength

        * DBSoap.m
        Fix parsing of query which has only one field, make 10.4 compatible.

Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.m
	SOQL query parser to extract fields.